2009-09-10: .315
  - Most public methods with an "id" arg now accept either base64
    or string GUID forms
  - Gave RCS support some attention, added tests

2009-09-04: .314
  - Removed default of 0 for DateTime, will allow NULL instead
  - Split auxiliary datatypes off into their own distro
  - Split experimental packages off into their own distro
  - Reduced number of classes loaded by default
  - Added more tests
  - Fixed symbols exported via :yield tag
  - More misc cleanup

2009-09-02: .313
  - Made all exports from OP.pm optional, added export tags
  - Skip MySQL tests if database was not available

2009-08-27: .312
  - Try fixing test script to work properly under Perl 5.11
  - Added manifesto-esque postamble to main OP.pm document
  - Misc doc updates

2009-08-20: .311
  - Changed from developer release to stable
  - OP::Shell was moved to its own distribution, Acme::Shell

2009-08-17: .310_001
  - Rewrote tests and added runtime framework loader (OP::Runtime)
  - Persistence now delegates to vendor-specific DBI packages,
    rather than hosting a bunch of if/else statements. Future backing
    store types should extend OP::Persistence::Generic and override
    DBI logic as necessary.
  - Gave SQLite support some attention
  - Added OP::Serial for first-class Serial type assertions

2009-08-10: .308
  - More doc updates and bug fixes
  - OP::DateTime now supports DATETIME + other column types, see POD
  - OP::Double now avoids E notation when stringifying, see POD

2009-07-28: .305
  - OP_HOME now defaults to the current user's home directory
  - Added "opconf" .oprc generation script
  - OP::Subtype constructors are no longer used outside of OP
    internals-- the "subtype" assert argument has been added, which
    replaces them in public usage and should feel cleaner (see examples)
  - OP no longer has to be bootstrapped from package 'main', and no
    longer exports OP::Subtype constructors